tests/Fase2-Semantic/error/t19-declaring_a_local_var_from_a_not_declared_class_type.ctds
class main {
	integer x;
	

	integer add(){
		nobasic e;
		x = x+1;
		return x;
	}

	void main(){
		x=0;
		add();
	}
	
}
